objects/ScheduleReports__Report_Scheduler_Setup__c.object
<CustomObject>
    <fields>
        <fullName>ScheduleReports__Attachment_Extension__c</fullName>
        <label>Attachment Extension</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>xls</fullName>
                </value>
                <value>
                    <fullName>csv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleReports__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Date_of_the_Month__c</fullName>
        <label>Date of the Month</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ScheduleReports__Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleReports__Day_of_the_Week__c</fullName>
        <label>Day of the Week</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ScheduleReports__Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SUN</fullName>
                    <label>Sunday</label>
                </value>
                <value>
                    <fullName>MON</fullName>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>TUE</fullName>
                    <label>Tuesday</label>
                </value>
                <value>
                    <fullName>WED</fullName>
                    <label>Wednesday</label>
                </value>
                <value>
                    <fullName>THU</fullName>
                    <label>Thursday</label>
                </value>
                <value>
                    <fullName>FRI</fullName>
                    <label>Friday</label>
                </value>
                <value>
                    <fullName>SAT</fullName>
                    <label>Saturday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleReports__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Email_ID__c</fullName>
        <label>Email Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ScheduleReports__Send_Now__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleReports__Hour__c</fullName>
        <label>First Run Hour</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ScheduleReports__Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <label>12:00 AM</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>01:00 AM</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>02:00 AM</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>03:00 AM</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>04:00 AM</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>05:00 AM</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>06:00 AM</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>07:00 AM</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>08:00 AM</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>09:00 AM</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10:00 AM</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>11:00 AM</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>12:00 PM</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>01:00 PM</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>02:00 PM</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>03:00 PM</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>04:00 PM</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>05:00 PM</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>06:00 PM</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>07:00 PM</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>08:00 PM</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>09:00 PM</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>10:00 PM</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>11:00 PM</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleReports__Minute__c</fullName>
        <label>Minute</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ScheduleReports__Frequency__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleReports__Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Recipients__c</fullName>
        <label>Recipients</label>
        <summaryForeignKey>ScheduleReports__Contact_Report__c.ScheduleReports__Report_Scheduler_Setup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Report_ID__c</fullName>
        <label>Standard Report ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Report_Name_FF__c</fullName>
        <formula>IF( ScheduleReports__Standard_Report_Name__c !=null, ScheduleReports__Standard_Report_Name__c,  ScheduleReports__Report_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Name FF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Report_Name__c</fullName>
        <label>Visualforce Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Report</fullName>
                </value>
                <value>
                    <fullName>Visualforce Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScheduleReports__Scheduler_Job_ID__c</fullName>
        <label>Scheduler Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Scheduler_Name__c</fullName>
        <label>Scheduler Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ScheduleReports__Selected_Contacts_Backend__c</fullName>
        <label>Selected Contacts Backend</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Selected_Contacts__c</fullName>
        <label>Selected Contacts</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Selected_Users_Backend__c</fullName>
        <label>Selected Users Backend</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Selected_Users__c</fullName>
        <label>Selected Users</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Send_Now__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Standard_Report_Name__c</fullName>
        <label>Standard Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleReports__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Report Scheduler Setup</label>
    <listViews>
        <fullName>ScheduleReports__All</fullName>
        <columns>NAME</columns>
        <columns>ScheduleReports__Scheduler_Name__c</columns>
        <columns>ScheduleReports__Attachment_Extension__c</columns>
        <columns>ScheduleReports__Frequency__c</columns>
        <columns>ScheduleReports__Email_ID__c</columns>
        <columns>ScheduleReports__Report_Name__c</columns>
        <columns>ScheduleReports__Report_ID__c</columns>
        <columns>ScheduleReports__Report_Type__c</columns>
        <columns>ScheduleReports__Scheduler_Job_ID__c</columns>
        <columns>ScheduleReports__Body__c</columns>
        <columns>ScheduleReports__Subject__c</columns>
        <columns>ScheduleReports__Enabled__c</columns>
        <columns>ScheduleReports__Recipient_Name__c</columns>
        <columns>ScheduleReports__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN{00000}</displayFormat>
        <label>Scheduler Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Scheduler Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>